deploy/sidekiq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: s95-sidekiq
  labels:
    app.kubernetes.io/name: s95
    app.kubernetes.io/component: sidekiq
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: s95
      app.kubernetes.io/component: sidekiq
  template:
    metadata:
      labels:
        app.kubernetes.io/name: s95
        app.kubernetes.io/component: sidekiq
    spec:
      imagePullSecrets:
        - name: registry-sion2k-pull
      containers:
        - name: sidekiq
          image: registry.sion2k.ru/s95/web:latest
          imagePullPolicy: Always
          command: ["/usr/src/app/bin/docker-entrypoint"]
          args: ["sidekiq"]
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              memory: 1536Mi
          volumeMounts:
            - name: additional-events
              mountPath: /usr/src/app/config/additional_events.yml
              subPath: additional_events.yml
              readOnly: true
      volumes:
        - name: additional-events
          configMap:
            name: s95-additional-events
