deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: s95-web
  labels:
    app.kubernetes.io/name: s95
    app.kubernetes.io/component: web
spec:
  selector:
    app.kubernetes.io/name: s95
    app.kubernetes.io/component: web
  ports:
    - name: http
      port: 3000
      targetPort: http
