deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: s95-web
  annotations:
    cert-manager.io/cluster-issuer: corp-acme
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - s95.sion2k.ru
      secretName: s95-sion2k-ru-tls
  rules:
    - host: s95.sion2k.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: s95-web
                port:
                  number: 3000
